--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -37,14 +37,14 @@
 			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
 				<i class="fa fa-bars"></i> All category 
 			</button>
+			
 			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Machinery / Mechanical Parts / Tools </a>
-				<a class="dropdown-item" href="#">Consumer Electronics / Home Appliances </a>
-				<a class="dropdown-item" href="#">Auto / Transportation</a>
-				<a class="dropdown-item" href="#">Apparel / Textiles / Timepieces </a>
-				<a class="dropdown-item" href="#">Home & Garden / Construction / Lights </a>
-				<a class="dropdown-item" href="#">Beauty & Personal Care / Health </a> 
+				<a class="dropdown-item" href="{% url 'store' %}">All Products</a>
+				{% for category in categories %}
+					<a class="dropdown-item" href="{{ category.get_url }}">{{ category.name }}</a>
+				{% endfor %}
 			</div>
+			
 		</div>  <!-- category-wrap.// -->
 	</div> <!-- col.// -->
 	<a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
